Style improvements - Fix gradient text effect when the text wraps - Improve effect consistency between light and dark mode - Better card colors

--- a/src/global.css
+++ b/src/global.css
@@ -3,7 +3,8 @@ html.dark {
   --colors-red: rgb(207, 60, 143);
   --colors-purple: rgb(111, 66, 194);
   --colors-text: #eee;
-  --colors-card: hsl(240, 6%, 24%);
+  --colors-card: hsl(240, 12%, 24%);
+  --colors-gloss: rgba(255, 255, 255, 0.15);
 }
 
 html.light {
@@ -11,7 +12,8 @@ html.light {
   --colors-red: rgb(207, 60, 143);
   --colors-purple: rgb(111, 66, 194);
   --colors-text: #333;
-  --colors-card: hsl(240, 6%, 88%);
+  --colors-card: hsl(240, 22%, 85%);
+  --colors-gloss: rgba(255, 255, 255, 0.5);
 }
 
 html, body {
@@ -33,38 +35,4 @@ h1, h2, h3, h4, h5, h6, .header {
   font-family: 'Lato', sans-serif;
   font-weight: 500;
   margin-top: 0;
-}
-
-#loader {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  background-color: hsl(224, 35%, 8%);
-
-  img {
-    filter: drop-shadow(0 0 0.2rem #000) drop-shadow(0 0 0.5rem #fff);
-  }
-
-  .loadingBar {
-    width: 35%;
-    height: 4px;
-    border-radius: 2px;
-    border: thin solid rgba(238, 238, 238, 0.5);
-    padding: 2px;
-    overflow: hidden;
-    margin-top: 4rem;
-    
-    .progress {
-      width: 0;
-      height: 100%;
-      background: #eee;
-      transition: width 0.1s ease-out;
-    }
-  }
 }
